[tool.poetry]
name = "nba_api"
version = "1.9.0b1"
description = "An API Client package to access the APIs for NBA.com"
authors = ["Swar Patel <swar.m.patel@gmail.com>"]
maintainers = [
    "Swar Patel <swar.m.patel@gmail.com>",
    "Randy Forbes <randy.forbes@gmail.com>"
]
license = "MIT"
keywords = ["api", "basketball", "data", "nba", "sports", "stats"]
readme = "README.md"
repository = "https://github.com/nexxj/nba_api"
homepage = "https://github.com/nexxj/nba_api"
documentation = "https://github.com/nexxj/nba_api/blob/master/README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = [
    {version = "<2.0.0", python = "<3.13"},
    {version = ">=2.0.0", python = ">=3.13"}
]
requests = "^2.32.3"
flask = "^2.2"
gunicorn = "^20.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^4.0"
flake8 = "^7.1.1"
pandas = [
    {version = ">=2.2.0", python = ">=3.12"},
    {version = "<2.2.0", python = "<3.12"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

